글또 다짐글2

--- a/_posts/geultto/2021-07-22-01_글또6기다짐글.md
+++ b/_posts/geultto/2021-07-22-01_글또6기다짐글.md
@@ -7,17 +7,17 @@ tags: geultto analytics
     src: /screenshot.jpg -->
 ---
 
-# 글또를 시작하며
+# 글또를 시작하며  
 
-## 글또를 시작한 계기
-### 나는 뭘 얻기를 원했나
+## 글또를 시작한 계기  
+### 나는 뭘 얻기를 원했나  
 
 
 | <img src="https://www.dropbox.com/s/ltb9yk8fuc7pczg/%ED%99%94%EB%A9%B4%20%EC%BA%A1%EC%B2%98%202021-07-22%20212237.png?dl=1"> |
 |:------:|
 |진짜 글또 지원하면서 쓴 지원 동기|
 
-위 동기가 '열심히 살고 싶어요'를 돌려 말한 거시적인 계기라면 글또 과정을 통해 내가 되고 싶은 분석가(혹은 관심을 가지고 있는 PM/PO)로서의 지식과 스킬을 갖추고 싶어 지원했다.
+위 동기가 '열심히 살고 싶어요'를 돌려 말한 거시적인 계기라면 글또 과정을 통해 내가 되고 싶은 분석가(혹은 관심을 가지고 있는 PM/PO)로서의 지식과 스킬을 갖추고 싶어 지원했다.  
 사실 완전 처음 구상한 것은 분석 프로젝트 및 인사이트 담긴 주장 글(~~자기 주장이 강한 편~~)의 비중이 높았으나, OT 때 개발자 글쓰기 커뮤니티라는 정체성을 한 번 더 강조해주셨고 맞는 말이라고 생각되어 지식과 스킬 관련 비중을 높이게 되었다.
 
 | <img src="https://www.dropbox.com/s/0x6llrqyilqcub0/%ED%99%94%EB%A9%B4%20%EC%BA%A1%EC%B2%98%202021-07-22%20215541.png?dl=1"> |
@@ -25,16 +25,32 @@ tags: geultto analytics
 |원래 하고 싶던 글쓰기 카테고리 (빠진 것들은 글또와 별개로 적어보겠습니다...)|
 
 ## 내가 되고 싶은 분석가(혹은 PM/PO)는?
-이미 분석가이면서 되고 싶은 모습이 있다는 것은 성장욕심이 있어서인지 현재에 불만족한 것인지 둘 다인지 모르겠으나 나름대로 방황의 시기를 거쳐 하고 싶은 미래의 내 일을 개인 구글독스에 적어보았다. 그 중 일부를 뽑아 짜집기하여 공유하자면 다음과 같다.
-> 경험상 중간인 직업은 없다. 지원부서의 성격을 가지면 오너십이 떨어지면서 업무 몰입도와 영향력이 떨어진다. 현업부서의 성격을 가지면 오너십이 높아지지만 상대적으로 항상 시간과 신경을 투입해야 한다.
-> 일은 소속감과 금전적 추구가 가장 베이스이다. 하지만 일의 의미라는 관점에서 얘기하려면 있을 때와 없을 때만 생각하면 안 된다. 회사가 내 기회를 제대로 못 살려주는 상황이라면 위의 두가지만 기본으로 챙기고 큰 기대를 하지 않는 것도 좋은 방법이지만, 회사가 내 기회를 잘 살려주고 나도 잘 하고 싶은 상황이라면 의미는 다를 것 같다.
-> 그렇다면 내 기회를 잘 살려준다는 것은 뭘까? 내게 문제를 풀 기회를 준다는 것이 아닐까?
+### 내가 하고 싶은 일의 유형과 추구하는 회사 규모   
+이미 분석가이면서 되고 싶은 모습이 있다는 것은 성장욕심이 있어서인지 현재에 불만족한 것인지 둘 다인지 모르겠으나 나름대로 방황의 시기를 거쳐 하고 싶은 미래의 내 일을 개인 구글독스에 적어보았다. 그 중 일부를 뽑아 짜집기하여 공유하자면 다음과 같다.  
+> 경험상 중간인 직업은 없다. 지원부서의 성격을 가지면 오너십이 떨어지면서 업무 몰입도와 영향력이 떨어진다. 현업부서의 성격을 가지면 오너십이 높아지지만 상대적으로 항상 시간과 신경을 투입해야 한다.  
+> 일은 소속감과 금전적 추구가 가장 베이스이다. 하지만 일의 의미라는 관점에서 얘기하려면 있을 때와 없을 때만 생각하면 안 된다. 회사가 내 기회를 제대로 못 살려주는 상황이라면 위의 두가지만 기본으로 챙기고 큰 기대를 하지 않는 것도 좋은 방법이지만, 회사가 내 기회를 잘 살려주고 나도 잘 하고 싶은 상황이라면 의미는 다를 것 같다.  
+> 그렇다면 내 기회를 잘 살려준다는 것은 뭘까? 내게 문제를 풀 기회를 준다는 것이 아닐까?  
 > 따라서 내게 일은 “문제해결”이다.
 
-> 현대사회는 이미 해결할만큼 문제들이 해결되어서 문제를 해결하는 것보다 문제를 발견하는 것이 중요해졌다 (책 뉴타입의 시대 주요 아이디어). 문제해결이라는 내 정의는 현대사회에서 좋은 회사, 좋은 직장에 유용한가?
-> 내 생각은 회사의 스테이지마다 다르다. 초기 스테이지 회사는 문제의 발견만이 하는 일의 전부이다. 문제가 발견되면 다음 스테이지로 갈 수 있고, 아니라면 회사는 사라진다. 회사의 스테이지가 뒤로 갈수록 발견한 문제를 기반으로 문제를 해결하기 시작한다. 문제의 발견은 토스, 컬리 같이 굳이 조금의 개선 혹은 극히 일부만 사용할만한 무언가이더라도 발견되는 순간 급속도로 발전할 수 있다. 하지만 잘 발견되지 않는다. 금전적으로 여유가 있다면 이 스테이지부터 참가해 폭발적인 성장을 경험하고 싶지만 일년일년의 돈벌이를 생각하면 이 스테이지의 참가는 무덤파기 행위일 수 있다.
-> 반면 스테이지가 어느정도 진행된 회사는 문제 탐색도 병행하겠지만 문제해결이 가장 중요한 과제이다. 심리적으로는 이 단계의 회사에 가는 것이 좋아보인다. 주의해야할 것은 이 스테이지가 너무 진행되어버린 회사는 억지로 문제를 만들어내는 회사가 된다. 따라서 적당한 얼리 스테이지~적당히 큰 스테이지까지의 회사가 현재로는 좋아보인다.
+> 현대사회는 이미 해결할만큼 문제들이 해결되어서 문제를 해결하는 것보다 문제를 발견하는 것이 중요해졌다 (책 뉴타입의 시대 주요 아이디어). 문제해결이라는 내 정의는 현대사회에서 좋은 회사, 좋은 직장에 유용한가?  
+> 내 생각은 회사의 스테이지마다 다르다. 초기 스테이지 회사는 문제의 발견만이 하는 일의 전부이다. 문제가 발견되면 다음 스테이지로 갈 수 있고, 아니라면 회사는 사라진다. 회사의 스테이지가 뒤로 갈수록 발견한 문제를 기반으로 문제를 해결하기 시작한다. 문제의 발견은 토스, 컬리 같이 굳이 조금의 개선 혹은 극히 일부만 사용할만한 무언가이더라도 발견되는 순간 급속도로 발전할 수 있다. 하지만 잘 발견되지 않는다. 금전적으로 여유가 있다면 이 스테이지부터 참가해 폭발적인 성장을 경험하고 싶지만 일년일년의 돈벌이를 생각하면 이 스테이지의 참가는 무덤파기 행위일 수 있다.  
+> 반면 스테이지가 어느정도 진행된 회사는 문제 탐색도 병행하겠지만 문제해결이 가장 중요한 과제이다. 심리적으로는 이 단계의 회사에 가는 것이 좋아보인다. 주의해야할 것은 이 스테이지가 너무 진행되어버린 회사는 억지로 문제를 만들어내는 회사가 된다. 따라서 적당한 얼리 스테이지~적당히 큰 스테이지까지의 회사가 현재로는 좋아보인다.  
 
+
+요약하자면 지원부서 성향의 업무보다는 *직접 문제를 해결*하는데 기여하는 일을 하고 싶고, 회사의 규모는 문제를 발견은 했고 해결해나가고 있는 *적당히 규모 확장한 스타트업*에서 일하고 싶다는 것이다.
+어떤 분석가가 되고 싶은지를 얘기하기 전에 어떤 일과 어떤 회사에서 일하고 싶은지를 적은 이유는 분석가의 업무는 회사의 규모와 회사에서 분석가에게 기대하는 깊이에 따라 달라질 수 있다는 것을 느꼈기 때문이다.
+
+### 프로덕트 분석
+현재 스스로 하고 싶은 role은 프로덕트 분석으로 설정해놓고 공부하고자 한다.  
+프로덕트 분석가의 일이 마치 데이터분석가가 그러하듯 경계선이 애매하긴 하지만 프로덕트를 개선하고 유저 경험을 좋게 만들고 성과를 높이는 일을 한다고 정의할 수 있을 것 같다.
+프로덕트 분석가가 해야할 일을 나름대로 국내외의 채용공고를 보면서 생각해봤는데 이번 당근마켓 채용공고가 잘 반영한 것 같다.
+
+| <img src="https://www.dropbox.com/s/qkg3aewxtgjq45y/%ED%99%94%EB%A9%B4%20%EC%BA%A1%EC%B2%98%202021-07-22%20232855.png?dl=1"> |
+|:------:|
+|당근마켓 프로덕트 데이터 분석가 채용공고|
+
+분석 역량 및 지식과 프로덕트에 대한 센스가 동시에 필요한 role이라고 생각되어 내가 추구하는 방향성과 잘 맞아 도전하고 싶다.  
+(느낌상 프로덕트 분석가에서 분석 역량을 조금 빼고 실행 역량을 높인 것이 PM/PO로 보기 때문에 PM/PO로의 전환도 긍정적으로 생각하고 있다.)  
 
 
 ## 글또 6기 동안 공부하고 적어나갈 내용들
