--- a/_posts/geultto/2021-07-22-01_글또6기다짐글.md
+++ b/_posts/geultto/2021-07-22-01_글또6기다짐글.md
@@ -7,8 +7,6 @@ tags: geultto analytics
     src: /screenshot.jpg -->
 ---
 
-# 글또를 시작하며  
-
 ## 글또를 시작한 계기  
 ### 나는 뭘 얻기를 원했나  
 
@@ -18,6 +16,8 @@ tags: geultto analytics
 |진짜 글또 지원하면서 쓴 지원 동기|
 
 위 동기가 '열심히 살고 싶어요'를 돌려 말한 거시적인 계기라면 글또 과정을 통해 내가 되고 싶은 분석가(혹은 관심을 가지고 있는 PM/PO)로서의 지식과 스킬을 갖추고 싶어 지원했다.  
+
+### 나는 뭘 하기를 원했나
 사실 완전 처음 구상한 것은 분석 프로젝트 및 인사이트 담긴 주장 글(~~자기 주장이 강한 편~~)의 비중이 높았으나, OT 때 개발자 글쓰기 커뮤니티라는 정체성을 한 번 더 강조해주셨고 맞는 말이라고 생각되어 지식과 스킬 관련 비중을 높이게 되었다.
 
 | <img src="https://www.dropbox.com/s/0x6llrqyilqcub0/%ED%99%94%EB%A9%B4%20%EC%BA%A1%EC%B2%98%202021-07-22%20215541.png?dl=1"> |
@@ -37,13 +37,13 @@ tags: geultto analytics
 > 반면 스테이지가 어느정도 진행된 회사는 문제 탐색도 병행하겠지만 문제해결이 가장 중요한 과제이다. 심리적으로는 이 단계의 회사에 가는 것이 좋아보인다. 주의해야할 것은 이 스테이지가 너무 진행되어버린 회사는 억지로 문제를 만들어내는 회사가 된다. 따라서 적당한 얼리 스테이지~적당히 큰 스테이지까지의 회사가 현재로는 좋아보인다.  
 
 
-요약하자면 지원부서 성향의 업무보다는 *직접 문제를 해결*하는데 기여하는 일을 하고 싶고, 회사의 규모는 문제를 발견은 했고 해결해나가고 있는 *적당히 규모 확장한 스타트업*에서 일하고 싶다는 것이다.
+요약하자면 지원부서 성향의 업무보다는 __직접 문제를 해결__ 하는데 기여하는 일을 하고 싶고, 회사의 규모는 문제를 발견은 했고 해결해나가고 있는 __적당히 규모 확장한 스타트업__ 에서 일하고 싶다는 것이다.
 어떤 분석가가 되고 싶은지를 얘기하기 전에 어떤 일과 어떤 회사에서 일하고 싶은지를 적은 이유는 분석가의 업무는 회사의 규모와 회사에서 분석가에게 기대하는 깊이에 따라 달라질 수 있다는 것을 느꼈기 때문이다.
 
-### 프로덕트 분석
-현재 스스로 하고 싶은 role은 프로덕트 분석으로 설정해놓고 공부하고자 한다.  
-프로덕트 분석가의 일이 마치 데이터분석가가 그러하듯 경계선이 애매하긴 하지만 프로덕트를 개선하고 유저 경험을 좋게 만들고 성과를 높이는 일을 한다고 정의할 수 있을 것 같다.
-프로덕트 분석가가 해야할 일을 나름대로 국내외의 채용공고를 보면서 생각해봤는데 이번 당근마켓 채용공고가 잘 반영한 것 같다.
+### 프로덕트 데이터 분석
+현재 스스로 하고 싶은 role은 프로덕트 데이터 분석으로 설정해놓고 공부하고자 한다.  
+프로덕트 데이터 분석가의 일이 마치 데이터 분석가가 그러하듯 경계선이 애매하긴 하지만 프로덕트를 개선하고 유저 경험을 좋게 만들고 성과를 높이는 일을 한다고 정의할 수 있을 것 같다.
+프로덕트 데이터 분석가가 해야할 일을 나름대로 국내외의 채용공고를 보면서 생각해봤는데 이번 당근마켓 채용공고가 잘 반영한 것 같다.
 
 | <img src="https://www.dropbox.com/s/qkg3aewxtgjq45y/%ED%99%94%EB%A9%B4%20%EC%BA%A1%EC%B2%98%202021-07-22%20232855.png?dl=1"> |
 |:------:|
@@ -53,5 +53,19 @@ tags: geultto analytics
 (느낌상 프로덕트 분석가에서 분석 역량을 조금 빼고 실행 역량을 높인 것이 PM/PO로 보기 때문에 PM/PO로의 전환도 긍정적으로 생각하고 있다.)  
 
 
-## 글또 6기 동안 공부하고 적어나갈 내용들
-그래서 정리한 글또 6기 기간동안
+# 글또 6기 동안 공부하고 적어나갈 내용들
+그래서 글또 6기 기간 동안 하고 싶은 일은 현재 업무에서 할 수 없는 프로덕트 분석가의 역량을 강화하는 일이다.  
+현업에서 하고있는 업무가 아니라 해서 포기할 순 없으니 현업의 경험만큼은 아니겠지만 그에 준하는 성장을 하고 기록하는 것이 목표다.     
+여기에는 spark, airflow 같은 데이터 엔지니어링(누군가에겐 그냥 데이터 추출일수도?) 툴에 익숙해지는 것도 포함된다.  
+
+1. 프로덕트 데이터 분석에 필요한 주요 개념들 공부하고 정리
+2. 데이터 엔지니어링 툴 개인적으로 활용해보기
+3. 좋은 해외 아티클 번역 및 요약
+4. 인과추론 공부하고 정리 (프로덕트 데이터 분석가에게 꼭 필요하다고 생각하진 않지만 알아두면 필요한 때도 분명히 있음)
+
+위 내용들을 주 목표로 하여 글또 6기 활동을 해나갈 예정이다.
+
+
+# 마치며
+항상 블로그를 할 때는 ~~(굉장히 자주 쉬지만)~~ '내가 아는 걸 알려줄게' 느낌보다는 '제가 공부한 걸 공유해볼게요' 느낌으로 해왔고 그게 제 스타일에 맞는 것 같습니다.  
+즉, 항상 부족함을 알고 있는 상태이고 일종의 성장일기이기도 하니 저보다 잘 아시는 분의 피드백, 잘 모르시는 분의 질문, 같이 공부하시려는 분의 연락 모두 환영입니다.  
